fixed bugs on firefox

--- a/components/contact/default/style.sass
+++ b/components/contact/default/style.sass
@@ -5,5 +5,4 @@ textarea {
   height: 250px;
   width: 100%;
   padding: 10px;
-  @include border-radius(3px);
 }
